--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Dev",
+      "name": "IdentityServer-Dev",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
@@ -18,6 +18,30 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_URLS": "http://localhost:5001/"
       },
+    },
+    {
+      "name": "Api-Dev",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build",
+      "program": "${workspaceFolder}/src/Api/bin/Debug/netcoreapp3.1/Api.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/src/Api",
+      "stopAtEntry": false,
+      "console": "internalConsole",
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:6001/"
+      },
+    }
+  ],
+  "compounds": [
+    {
+        "name": "Run-All-Dev",
+        "configurations": [
+            "IdentityServer-Dev",
+            "Api-Dev"
+        ]
     }
   ]
 }
