--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       "console": "internalConsole",
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://localhost:5001/"
+        "ASPNETCORE_URLS": "https://localhost:5001/"
       },
     },
     {
@@ -31,17 +31,17 @@
       "console": "internalConsole",
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://localhost:6001/"
+        "ASPNETCORE_URLS": "https://localhost:6001/"
       },
     }
   ],
   "compounds": [
     {
-        "name": "Run-All-Dev",
-        "configurations": [
-            "IdentityServer-Dev",
-            "Api-Dev"
-        ]
+      "name": "Run-All-Dev",
+      "configurations": [
+        "IdentityServer-Dev",
+        "Api-Dev"
+      ]
     }
   ]
 }
