--- a/src/IdentityServer/Properties/launchSettings.json
+++ b/src/IdentityServer/Properties/launchSettings.json
@@ -1,12 +1,23 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true
+  },
   "profiles": {
-    "SelfHost": {
-      "commandName": "Project",
-      "launchBrowser": true,
+    "IDP-Dev": {
+      "commandName": "IISExpress",
+      "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001"
+      }
+    },
+    "SelfHost": {
+      "commandName": "Project",
+      "applicationUrl": "https://localhost:5001",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
